--- a/asset/css/stylereport.css
+++ b/asset/css/stylereport.css
@@ -41,7 +41,7 @@ header {
 
 h1 {
   /*border-top: 1px solid  #5D6975;*/
-  border-bottom: 1px solid  #5D6975;
+  /*border-bottom: 1px solid  #5D6975;*/
   color: #5D6975;
   font-size: 2.4em;
   line-height: 1.4em;
@@ -52,6 +52,10 @@ h1 {
 }
 h2{
   color: #5D6975;
+}
+h3{
+  color: #5D6975;
+  border-bottom: 1px solid  #5D6975;
 }
 
 #project {
